[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://entities/player/InGameMenu.gd" type="Script" id=3]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(-2.0, 10.0);
uniform float mix_amount : hint_range(0.0, 1.0);
uniform vec4 color_over : hint_color;

void fragment() {
	vec4 blurred = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
	vec4 fin = mix(blurred, color_over, mix_amount);
	COLOR = fin;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/blur_amount = 3.0
shader_param/mix_amount = 0.8
shader_param/color_over = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:material:shader_param/mix_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu:material:shader_param/blur_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/HBoxContainer/MenuOptions:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:material:shader_param/mix_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 0.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu:material:shader_param/blur_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 3.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/HBoxContainer/MenuOptions:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="InGameMenu" type="CanvasLayer"]
layer = 5
script = ExtResource( 3 )

[node name="Menu" type="ColorRect" parent="."]
visible = false
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0

[node name="MenuOptions" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_right = 400.0
margin_bottom = 1080.0
alignment = 1

[node name="ResumeButton" type="Button" parent="Menu/HBoxContainer/MenuOptions"]
margin_top = 332.0
margin_right = 400.0
margin_bottom = 412.0
rect_min_size = Vector2( 400, 80 )
text = "Resume"

[node name="RestartButton" type="Button" parent="Menu/HBoxContainer/MenuOptions"]
margin_top = 416.0
margin_right = 400.0
margin_bottom = 496.0
rect_min_size = Vector2( 400, 80 )
text = "Restart Level"

[node name="SettingsButton" type="Button" parent="Menu/HBoxContainer/MenuOptions"]
margin_top = 500.0
margin_right = 400.0
margin_bottom = 580.0
rect_min_size = Vector2( 400, 80 )
text = "Settings"

[node name="ReturnButton" type="Button" parent="Menu/HBoxContainer/MenuOptions"]
margin_top = 584.0
margin_right = 400.0
margin_bottom = 664.0
rect_min_size = Vector2( 400, 80 )
text = "Return To Main Menu"

[node name="QuitButton" type="Button" parent="Menu/HBoxContainer/MenuOptions"]
margin_top = 668.0
margin_right = 400.0
margin_bottom = 748.0
rect_min_size = Vector2( 400, 80 )
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/show = SubResource( 2 )

[connection signal="pressed" from="Menu/HBoxContainer/MenuOptions/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/MenuOptions/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="button_up" from="Menu/HBoxContainer/MenuOptions/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="pressed" from="Menu/HBoxContainer/MenuOptions/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/MenuOptions/QuitButton" to="." method="_on_QuitButton_pressed"]
